Updated secret annotation

--- a/vplugin-demo-secret.yml
+++ b/vplugin-demo-secret.yml
@@ -4,7 +4,7 @@ metadata:
   namespace: argocd-vault
   name: example-secret
   annotations:
-    avp_path: "secret/data/vplugin/supersecret"
+    avp.kubernetes.io/path: "secret/vplugin/supersecret"
 type: Opaque
 stringData:
   username: <username>
