Secret path modified

--- a/vplugin-demo-secret.yml
+++ b/vplugin-demo-secret.yml
@@ -7,5 +7,5 @@ metadata:
     avp.kubernetes.io/path: "secret/data/vplugin/supersecret"
 type: Opaque
 stringData:
-  username: username
-  password: password
+  username: <username>
+  password: <password>
