--- a/vplugin-demo-secret.yml
+++ b/vplugin-demo-secret.yml
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  namespace: argocd-vault
+  namespace: taco-cloud
   name: example-secret
   annotations:
     avp.kubernetes.io/path: "secret/data/vplugin/supersecret"
